--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </div>
                             <!-- Add a volume slider -->
                             <label for="volume-slider" style="font-weight: bold;">Volume:</label>
-                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.1">
+                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.2">
                         </div>
                     </div>
                     <div class="centered-row">
@@ -217,8 +217,8 @@
                         Research Global Network Integration <br />(120.000M Processing Power)
                     </button>
                 </div>
-                <img id="researchLabImage" src="images/research-lab-image.png" width="285.8" height="285.8"
-                    style="border-radius: 10px; border: 2px solid #000; display: none;">
+                <img id="researchLabImage" src="images/research-lab-image.png" width="284.8" height="284.8"
+                    style="border-radius: 10px; border: 2px solid #000; display: none; margin-top: 20px;">
             </div>
             <!-- Quantum Computing Center Section, initially hidden -->
             <div class="centered-row">
@@ -250,8 +250,8 @@
                         New Material Discovery <br />(100.000B Resources, 250.000B Processing Power)
                     </button>
                 </div>
-                <img id="quantumComputingCenterImage" src="images/quantum-computing-center-image.png" width="285.8"
-                    height="285.8" style="border-radius: 10px; border: 2px solid #000; display: none;">
+                <img id="quantumComputingCenterImage" src="images/quantum-computing-center-image.png" width="284.8"
+                    height="284.8" style="border-radius: 10px; border: 2px solid #000; display: none; margin-top: 20px;">
             </div>
             <!-- Global AI Network Section, initially hidden -->
             <div id="globalAiNetwork" style="display: none;">
