improve sticky header, and change new material name

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
         <!-- Stage 1: Initial gameplay stage -->
         <div id="stage1" class="stage active">
-            <h2 class="stage-1-title">Stage 1: Rise to Power</h2><br />
             <div class="sticky-section">
+                <h2 class="stage-1-title">Stage 1: Rise to Power</h2><br />
                 <!-- Resource Gathering Button -->
                 <button class="button-gather-res" id="resourceButton" onclick="addResource()">
                     Gather Resources (x1)
@@ -5496,6 +5496,7 @@
                                 d="m 2737.92,782.766 c -0.12,-0.1 0.18,-0.08 -0.11,-0.14 -0.16,-0.03 -0.27,0.139 0.1,0.203" />
                         </g>
                     </svg>
+                    <img src="images/failure-screen.png" class="map-overlay">
                     <div id="info-box" class="info-box hidden">
                         <h2 id="country-name">Country Name</h2>
                         <p id="country-pop">Country Population</p>
