--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <!-- Stage 1: Initial gameplay stage -->
         <div id="stage1" class="stage active">
-            <div class="sticky-section">
+            <div class="sticky-section bottom-shadow">
                 <h2 class="stage-1-title">Stage 1: Rise to Power</h2><br />
                 <!-- Resource Gathering Button -->
                 <button class="button-gather-res" id="resourceButton" onclick="addResource()">
