improve map screen overlay

--- a/index.html
+++ b/index.html
@@ -5496,7 +5496,7 @@
                                 d="m 2737.92,782.766 c -0.12,-0.1 0.18,-0.08 -0.11,-0.14 -0.16,-0.03 -0.27,0.139 0.1,0.203" />
                         </g>
                     </svg>
-                    <img src="images/failure-screen.png" class="map-overlay">
+                    <img src="images/failure-screen.png" class="map-overlay glitch" style="border-radius: 5px;">
                     <div id="info-box" class="info-box hidden">
                         <h2 id="country-name">Country Name</h2>
                         <p id="country-pop">Country Population</p>
