--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                         </div>
                     </div>
                     <div class="centered-row">
+                        <button id="saveGameButton" onclick="saveGame()">Save Game</button>
+                        <button id="loadGameButton" onclick="loadGame()">Load Game</button>
+                        <button id="resetGameButton" onclick="resetGame()">Reset Game</button>
+                    </div>
+                    <div class="centered-row">
                         <div class="music-player-container">
                             <h2 id="trackName"><!-- Track Name injected here --></h2>
                             <br>
