--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
         <!-- Stage 1: Initial gameplay stage -->
         <div id="stage1" class="stage active">
             <div class="sticky-section bottom-shadow">
-                <h2 class="stage-1-title">Stage 1: Rise to Power</h2><br />
+                <div id="stageBar">
+                    <h2 class="stage-1-title">Stage 1: Rise to Power</h2>
+                    <span id="stage-timer">0:00</span>
+                </div>
+                <br />
                 <!-- Resource Gathering Button -->
                 <button class="button-gather-res" id="resourceButton" onclick="addResource()">
                     Gather Resources (x1)
