fix spacing so header isn't on top of tooltip

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="flex-row">
                 <div class="left-group">
                     <!-- Auto Gatherer Button, initially hidden -->
-                    <button class="button-upgrades info-button" id="autoGathererButton" style="display: none;"
+                    <button class="button-upgrades info-button" id="autoGathererButton" style="display: none; margin-top: 10px;"
                         data-tooltip="Gathers resources automatically" onclick="buyAutoGatherer()">
                         Buy Auto Gatherer (50 Resources)
                     </button>
