add player stats for stage 1

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <br />
                 <!-- Resource Gathering Button -->
-                <button class="button-gather-res" id="resourceButton" onclick="addResource()">
+                <button class="button-gather-res" id="resourceButton" onclick="addResource(); increaseClickCount();">
                     Gather Resources (x1)
                 </button>
                 <!-- Resource Multiplier Button, initially hidden -->
