make dev tools more streamlined

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <div class="dev-tools flex-column">
                             <span id="devModeTools" style="color: red;">DEVMODETOOLS</span><br />
                             <div class="flex-row">
-                                <label id="devRes" contenteditable="true" data-placeholder="Add Dev Resources"></label>
-                                <label id="devPow" contenteditable="true" data-placeholder="Add Dev Power"></label>
-                                <label id="devVip" contenteditable="true" data-placeholder="Add Dev ViperCoin"></label>
+                                <button class="dev-button" id="devRes">Add Resources</button>
+                                <button class="dev-button" id="devPow">Add Power</button>
+                                <button class="dev-button" id="devVip">Add ViperCoin</button>
                             </div>
                         </div>
                     </div>
