--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Overlord</title>
-    <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="images/ai-overlord-favicon_32.ico" />
@@ -79,7 +78,7 @@
                             <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.1">
                         </div>
                     </div>
-                    <div class="centered-row" style="transform: scale(0.85);">
+                    <div class="centered-row" style="transform: scale(0.85); min-width: 420px; max-width: 420px;">
                         <!-- Toggle Tooltips Option -->
                         <label class="switch">
                             <input type="checkbox" checked onclick="toggleTooltips()" />
@@ -88,7 +87,7 @@
                         <div class="spacer"></div>
                         <span class="toggle-title">Toggle Tooltips</span>
                     </div>
-                    <div class="centered-row" style="transform: scale(0.85);">
+                    <div class="centered-row" style="transform: scale(0.85); min-width: 420px; max-width: 420px;">
                         <!-- Toggle Glitch Effect Option -->
                         <label class="switch">
                             <input type="checkbox" id="toggle-glitch" checked onclick="toggleGlitchEffect()" />
@@ -159,15 +158,15 @@
                     <span id="autoGathererCounter" style="display: none;">0 Auto Gatherers</span><br />
                     <!-- Optimization Button, initially hidden -->
                     <button class="button-upgrades info-button" id="optimizeButton" style="display: none;"
-                        data-tooltip="Optimizes code to gather more resources per second" onclick="optimizeCode()">
-                        Optimize Code (1.000K Resources)
+                        data-tooltip="Optimizes code to gather more resources/sec" onclick="optimizeCode()">
+                        Optimize Code (1,000 Resources)
                     </button>
                     <span id="optimizationsCounter" style="display: none;">0 Optimizations</span><br />
                     <!-- High-Efficiency Auto-Gatherer Button, initially hidden -->
                     <button class="button-upgrades info-button" id="highEfficiencyGathererButton" style="display: none;"
                         data-tooltip="Gathers resources much faster than regular Auto Gatherers"
                         onclick="buyHighEfficiencyGatherer()">
-                        Buy High-Efficiency Auto-Gatherer <br />(5.000K Resources, 3.000K Processing Power)
+                        Buy High-Efficiency Auto-Gatherer <br />(5,000 Resources & 3,000 Processing Power)
                     </button>
                     <span id="highEfficiencyGathererCounter" style="display: none;">0 High-Efficiency
                         Auto-Gatherers</span>
@@ -223,26 +222,26 @@
                     <!-- Research AI Button -->
                     <button class="button-upgrades info-button" id="researchAIButton" onclick="researchAI()"
                         data-tooltip="Improves processing power generation rate.">
-                        Research Neural Network Optimization <br />(1.000K Processing Power)
+                        Research Neural Network Optimization <br />(1,000 Processing Power)
                     </button>
                     <span class="level-display" id="researchAILevelDisplay">Level 0</span>
                     <!-- Quantum Computing Button -->
                     <button class="button-upgrades info-button" id="quantumComputingButton"
                         onclick="researchQuantumComputing()" data-tooltip="Doubles processing power generation rate.">
-                        Research Quantum Computing <br />(5.000K Processing Power)
+                        Research Quantum Computing <br />(5,000 Processing Power)
                     </button>
                     <span class="level-display" id="quantumComputingLevelDisplay">Level 0</span>
                     <!-- Advanced Algorithms Button -->
                     <button class="button-upgrades info-button" id="advancedAlgorithmsButton"
                         onclick="researchAdvancedAlgorithms()"
                         data-tooltip="Unlocks High-Efficiency Auto-Gatherers. Each level doubles manual resource gathering efficiency.">
-                        Research Advanced Algorithms <br />(8.000K Processing Power)
+                        Research Advanced Algorithms <br />(8,000 Processing Power)
                     </button>
                     <span class="level-display" id="advancedAlgorithmsLevelDisplay">Level 0</span>
                     <!-- Global Network Integration Button -->
                     <button class="button-upgrades info-button" id="globalNetworkButton"
                         onclick="researchGlobalNetwork()" data-tooltip="Unlocks Global AI Network.">
-                        Research Global Network Integration <br />(120.000M Processing Power)
+                        Research Global Network Integration <br />(120,000,000 Processing Power)
                     </button>
                 </div>
                 <img id="researchLabImage" src="images/research-lab-image.png" width="410" height="410"
@@ -256,26 +255,27 @@
                     <button class="button-upgrades info-button" id="quantumAlgorithmsButton"
                         onclick="quantumAlgorithmsDevelopmentAndTesting()"
                         data-tooltip="Increases resource gathering speed.">
-                        Quantum Algorithms Development and Testing <br />(20.000M Resources, 10.000M Processing Power)
+                        Quantum Algorithms Development and Testing <br />(20,000,000 Resources & 10,000,000 Processing
+                        Power)
                     </button>
                     <span class="level-display" id="quantumAlgorithmsLevelDisplay">Level 0</span>
                     <!-- Quantum Information Button -->
                     <button class="button-upgrades info-button" id="quantumInfoButton"
                         onclick="researchQuantumInformationTheory()" data-tooltip="Increases processing power rate.">
-                        Research Quantum Information Theory <br />(30.000M Resources, 15.000M Processing Power)
+                        Research Quantum Information Theory <br />(30,000,000 Resources & 15,000,000 Processing Power)
                     </button>
                     <span class="level-display" id="quantumInfoLevelDisplay">Level 0</span>
                     <!-- Quantum Cryptography Button -->
                     <button class="button-upgrades info-button" id="quantumCryptoButton"
                         onclick="researchCryptographyAndSecurity()"
                         data-tooltip="Unlocks new cryptocurrency. Doubles production rate with each additional level researched.">
-                        Cryptography and Security Research <br />(50.000M Resources, 25.000M Processing Power)
+                        Cryptography and Security Research <br />(50,000,000 Resources & 25,000,000 Processing Power)
                     </button>
                     <span class="level-display" id="quantumCryptoLevelDisplay">Level 0</span>
                     <!-- Quantum Material Button -->
                     <button class="button-upgrades info-button" id="quantumMaterialButton"
                         onclick="discoverNewMaterial()" data-tooltip="Discover a brand new material.">
-                        New Material Discovery <br />(250.000B Resources, 100.000B Processing Power)
+                        New Material Discovery <br />(250,000,000,000 Resources & 100,000,000,000 Processing Power)
                     </button>
                 </div>
                 <img id="quantumComputingCenterImage" src="images/quantum-computing-center-image.png" width="410"
