--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <audio id="background-music"></audio>
     <div id="game-container">
         <!-- Header Section -->
-        <div class="flex-row" style="margin-bottom: -50px;">
+        <div class="flex-row">
             <div class="left-group">
                 <h1 class="ai-overlord-title" id="gameTitle">AI Overlord</h1>
             </div>
@@ -42,7 +42,7 @@
                             <br>
                             <!-- Progress Bar Container -->
                             <div class="progress-container">
-                                <span id="current-time" style="margin-right: 10px;">0:00</span>
+                                <span id="current-time">0:00</span>
                                 <div class="spacer"></div>
                                 <div class="spacer"></div>
                                 <div class="progress-bar">
