--- a/index.html
+++ b/index.html
@@ -44,16 +44,14 @@
                             <div class="progress-container">
                                 <span id="current-time">0:00</span>
                                 <div class="spacer"></div>
-                                <div class="spacer"></div>
                                 <div class="progress-bar">
                                     <div class="music-progress-fill"></div>
                                 </div>
                                 <div class="spacer"></div>
                                 <span id="total-time">0:00</span>
                             </div>
-                            <br>
                             <!-- Toggle Music -->
-                            <div class="flex-row" style="margin-bottom: 10px;">
+                            <div class="flex-row">
                                 <button id="prev-track-button">
                                     <img src="images/skip-prev.svg">
                                 </button>
@@ -78,7 +76,7 @@
                             <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.1">
                         </div>
                     </div>
-                    <div class="centered-row" style="transform: scale(0.85); min-width: 420px; max-width: 420px;">
+                    <div id="toggle-tooltips-row" class="centered-row">
                         <!-- Toggle Tooltips Option -->
                         <label class="switch">
                             <input type="checkbox" checked onclick="toggleTooltips()" />
@@ -87,7 +85,7 @@
                         <div class="spacer"></div>
                         <span class="toggle-title">Toggle Tooltips</span>
                     </div>
-                    <div class="centered-row" style="transform: scale(0.85); min-width: 420px; max-width: 420px;">
+                    <div id="toggle-glitch-row" class="centered-row">
                         <!-- Toggle Glitch Effect Option -->
                         <label class="switch">
                             <input type="checkbox" id="toggle-glitch" checked onclick="toggleGlitchEffect()" />
@@ -137,7 +135,7 @@
                 </div>
                 <!-- Display for viper coin counter and rate -->
                 <div id="viperCoinBar">
-                    <div class="flex-row" style="justify-content: center; align-items: center; margin-top: 2px;">
+                    <div id="viper-coin-counter-icon-row" class="flex-row">
                         <span id="viperCoinCounter" style="display: none;">0 ViperCoin</span>
                         <div class="crypto-icon" id="cryptoIcon" style="display: none;"></div>
                     </div>
@@ -150,9 +148,8 @@
             <div class="flex-row">
                 <div class="left-group">
                     <!-- Auto Gatherer Button, initially hidden -->
-                    <button class="button-upgrades info-button" id="autoGathererButton"
-                        style="display: none; margin-top: 10px;" data-tooltip="Gathers resources automatically"
-                        onclick="buyAutoGatherer()">
+                    <button class="button-upgrades info-button" id="autoGathererButton" style="display: none;"
+                        data-tooltip="Gathers resources automatically" onclick="buyAutoGatherer()">
                         Buy Auto Gatherer (50 Resources)
                     </button>
                     <span id="autoGathererCounter" style="display: none;">0 Auto Gatherers</span><br />
@@ -244,8 +241,7 @@
                         Research Global Network Integration <br />(120,000,000 Processing Power)
                     </button>
                 </div>
-                <img id="researchLabImage" src="images/research-lab-image.png" width="410" height="410"
-                    style="border-radius: 10px; border: 2px solid #000; display: none; margin-top: 20px;">
+                <img id="researchLabImage" src="images/research-lab-image.png" width="410" height="410">
             </div>
             <!-- Quantum Computing Center Section, initially hidden -->
             <div class="centered-row">
@@ -279,8 +275,7 @@
                     </button>
                 </div>
                 <img id="quantumComputingCenterImage" src="images/quantum-computing-center-image.png" width="410"
-                    height="410"
-                    style="border-radius: 10px; border: 2px solid #000; display: none; margin-top: 20px; margin-bottom: 20px;">
+                    height="410">
             </div>
             <!-- Global AI Network Section, initially hidden -->
             <div id="globalAiNetwork" style="display: none;">
@@ -5508,7 +5503,7 @@
                                 d="m 2737.92,782.766 c -0.12,-0.1 0.18,-0.08 -0.11,-0.14 -0.16,-0.03 -0.27,0.139 0.1,0.203" />
                         </g>
                     </svg>
-                    <img src="images/failure-screen.png" class="map-overlay glitch" style="border-radius: 5px;">
+                    <img src="images/failure-screen.png" class="map-overlay glitch">
                     <div id="info-box" class="info-box hidden">
                         <h2 id="country-name">Country Name</h2>
                         <p id="country-pop">Country Population</p>
