--- a/index.html
+++ b/index.html
@@ -16,86 +16,81 @@
     <audio id="background-music"></audio>
     <div id="game-container">
         <!-- Header Section -->
-        <div class="flex-row">
-            <div class="left-group">
-                <h1 class="ai-overlord-title" id="gameTitle">AI Overlord</h1>
-            </div>
-            <div class="right-group">
-                <!-- Hamburger Menu for settings -->
-                <div id="myNav" class="overlay">
-                    <span class="closebtn" onclick="closeNav()">&times;</span>
-                    <!-- Add more overlay content as necessary -->
-                    <div class="centered-row">
-                        <!-- Developer Inputs for adding resources and power during testing -->
-                        <div class="dev-tools flex-column">
-                            <span id="devModeTools" style="color: red;">DEVMODETOOLS</span><br />
-                            <div class="flex-row">
-                                <button class="dev-button" id="devRes">Add Resources</button>
-                                <button class="dev-button" id="devPow">Add Power</button>
-                                <button class="dev-button" id="devVip">Add ViperCoin</button>
-                            </div>
+        <div id="title-row" class="flex-row">
+            <h1 class="ai-overlord-title" id="gameTitle">AI Overlord</h1>
+            <!-- Hamburger Menu for settings -->
+            <div id="myNav" class="overlay">
+                <span class="closebtn" onclick="closeNav()">&times;</span>
+                <!-- Add more overlay content as necessary -->
+                <div class="centered-row">
+                    <!-- Developer Inputs for adding resources and power during testing -->
+                    <div class="dev-tools flex-column">
+                        <span id="devModeTools" style="color: red;">DEVMODETOOLS</span><br />
+                        <div class="flex-row">
+                            <button class="dev-button" id="devRes">Add Resources</button>
+                            <button class="dev-button" id="devPow">Add Power</button>
+                            <button class="dev-button" id="devVip">Add ViperCoin</button>
                         </div>
-                    </div>
-                    <div class="centered-row">
-                        <div class="music-player-container">
-                            <h2 id="trackName"><!-- Track Name injected here --></h2>
-                            <br>
-                            <!-- Progress Bar Container -->
-                            <div class="progress-container">
-                                <span id="current-time">0:00</span>
-                                <div class="spacer"></div>
-                                <div class="progress-bar">
-                                    <div class="music-progress-fill"></div>
-                                </div>
-                                <div class="spacer"></div>
-                                <span id="total-time">0:00</span>
-                            </div>
-                            <!-- Toggle Music -->
-                            <div class="flex-row">
-                                <button id="prev-track-button">
-                                    <img src="images/skip-prev.svg">
-                                </button>
-                                <button id="music-toggle-button">
-                                    <img src="images/play.svg">
-                                </button>
-                                <button id="next-track-button">
-                                    <img src="images/skip-next.svg">
-                                </button><br />
-                            </div>
-                            <!-- Toggle Shuffle Music -->
-                            <div class="centered-row shuffler">
-                                <label class="small-switch">
-                                    <input type="checkbox" onclick="toggleShuffleMusic()" />
-                                    <span class="small-slider round"></span>
-                                </label>
-                                <div class="small-spacer"></div>
-                                <span class="small-toggle-title">Shuffle Music?</span>
-                            </div>
-                            <!-- Volume slider -->
-                            <label for="volume-slider" id="volumeLabel">Volume:</label>
-                            <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.1">
-                        </div>
-                    </div>
-                    <div id="toggle-tooltips-row" class="centered-row">
-                        <!-- Toggle Tooltips Option -->
-                        <label class="switch">
-                            <input type="checkbox" checked onclick="toggleTooltips()" />
-                            <span class="slider round"></span>
-                        </label>
-                        <div class="spacer"></div>
-                        <span class="toggle-title">Toggle Tooltips</span>
-                    </div>
-                    <div id="toggle-glitch-row" class="centered-row">
-                        <!-- Toggle Glitch Effect Option -->
-                        <label class="switch">
-                            <input type="checkbox" id="toggle-glitch" checked onclick="toggleGlitchEffect()" />
-                            <span class="slider round"></span>
-                        </label>
-                        <div class="spacer"></div>
-                        <span class="toggle-title">Toggle Glitch Effect</span>
                     </div>
                 </div>
-
+                <div class="centered-row">
+                    <div class="music-player-container">
+                        <h2 id="trackName"><!-- Track Name injected here --></h2>
+                        <br>
+                        <!-- Progress Bar Container -->
+                        <div class="progress-container">
+                            <span id="current-time">0:00</span>
+                            <div class="spacer"></div>
+                            <div class="progress-bar">
+                                <div class="music-progress-fill"></div>
+                            </div>
+                            <div class="spacer"></div>
+                            <span id="total-time">0:00</span>
+                        </div>
+                        <!-- Toggle Music -->
+                        <div class="flex-row">
+                            <button id="prev-track-button">
+                                <img src="images/skip-prev.svg">
+                            </button>
+                            <button id="music-toggle-button">
+                                <img src="images/play.svg">
+                            </button>
+                            <button id="next-track-button">
+                                <img src="images/skip-next.svg">
+                            </button><br />
+                        </div>
+                        <!-- Toggle Shuffle Music -->
+                        <div class="centered-row shuffler">
+                            <label class="small-switch">
+                                <input type="checkbox" onclick="toggleShuffleMusic()" />
+                                <span class="small-slider round"></span>
+                            </label>
+                            <div class="small-spacer"></div>
+                            <span class="small-toggle-title">Shuffle Music?</span>
+                        </div>
+                        <!-- Volume slider -->
+                        <label for="volume-slider" id="volumeLabel">Volume:</label>
+                        <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.1">
+                    </div>
+                </div>
+                <div id="toggle-tooltips-row" class="centered-row">
+                    <!-- Toggle Tooltips Option -->
+                    <label class="switch">
+                        <input type="checkbox" checked onclick="toggleTooltips()" />
+                        <span class="slider round"></span>
+                    </label>
+                    <div class="spacer"></div>
+                    <span class="toggle-title">Toggle Tooltips</span>
+                </div>
+                <div id="toggle-glitch-row" class="centered-row">
+                    <!-- Toggle Glitch Effect Option -->
+                    <label class="switch">
+                        <input type="checkbox" id="toggle-glitch" checked onclick="toggleGlitchEffect()" />
+                        <span class="slider round"></span>
+                    </label>
+                    <div class="spacer"></div>
+                    <span class="toggle-title">Toggle Glitch Effect</span>
+                </div>
             </div>
         </div>
 
