--- a/index.html
+++ b/index.html
@@ -275,6 +275,49 @@
             <!-- Global AI Network Section, initially hidden -->
             <div id="globalAiNetwork" style="display: none;">
                 <h3>🤖Global AI Network🤖</h3>
+                <div class="global-ai-network-map-fake">
+                    <img src="images/static-global-map.png">
+                    <img src="images/failure-screen.png" class="map-overlay glitch">
+                </div>
+            </div>
+            <!-- Button to proceed to the next stage -->
+            <button id="stage1-btn" style="display: none;">Next Stage</button>
+        </div>
+
+        <!-- Stage 2: Second gameplay stage -->
+        <div id="stage2" class="stage">
+            <div class="sticky-section">
+                <div id="stageBar-2">
+                    <h2 class="stage-2-title">Stage 2: Conquer the World</h2>
+                    <!-- Hamburger Icon to open the menu -->
+                    <span class="hamburger" onclick="openNav()"><span></span></span>
+                </div>
+                <span id="stage-timer-2">00:00</span>
+                <br />
+                <hr />
+                <!-- Display for resource count and resources per second -->
+                <div id="resourceBar-2">
+                    <span id="resourceCounter-2">0 Resources🔗</span>
+                    <span id="resPerSec-2">0 Resources/sec</span>
+                </div>
+                <!-- Display for processing power count and processing power per second -->
+                <div id="processingPowerBar-2">
+                    <span id="processingPowerCounter-2">0 Processing Power ⚙️</span>
+                    <span id="processingPowerPerSec-2">0 Processing Power/sec</span>
+                </div>
+                <!-- Display for viper coin counter and rate -->
+                <div id="viperCoinBar-2">
+                    <div id="viper-coin-counter-icon-row-2" class="flex-row">
+                        <span id="viperCoinCounter-2">0 ViperCoin</span>
+                        <div class="crypto-icon" id="cryptoIcon"></div>
+                    </div>
+                    <span id="viperCoinPerSec-2">0 ViperCoin/sec</span>
+                </div>
+                <hr />
+            </div>
+            <!-- Global AI Network Section -->
+            <div id="globalAiNetwork-real" style="display: none;">
+                <h3>🤖Global AI Network🤖</h3>
                 <div class="map-controls">
                     <button id="reset-map">Reset Map Position</button>
                 </div>
@@ -5498,22 +5541,13 @@
                                 d="m 2737.92,782.766 c -0.12,-0.1 0.18,-0.08 -0.11,-0.14 -0.16,-0.03 -0.27,0.139 0.1,0.203" />
                         </g>
                     </svg>
-                    <img src="images/failure-screen.png" class="map-overlay glitch">
                     <div id="info-box" class="info-box hidden">
                         <h2 id="country-name">Country Name</h2>
                         <p id="country-pop">Country Population</p>
                     </div>
                 </div>
             </div>
-            <!-- Button to proceed to the next stage -->
-            <button id="stage1-btn" style="display: none;">Next Stage</button>
-        </div>
-
-        <!-- Stage 2: Second gameplay stage -->
-        <div id="stage2" class="stage">
-            <h2>Stage 2: Conquer the World</h2>
-            <p>Instructions and game elements for Stage 2</p>
-            <button id="stage2-btn">Next Stage</button>
+            <button id="stage2-btn" style="display: none;">Next Stage</button>
         </div>
 
         <!-- Stage 3: Final gameplay stage -->
